--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -57,17 +57,17 @@
                         <div class="box box-widget widget-user-2">
                             <div class="widget-user-header bg-green p-10">
                                 <h3 class="widget-user-username m-l-0">Enquiry</h3>
-                                <h5 class="widget-user-desc m-l-0">Pending</h5>
+                                <h5 class="widget-user-desc m-l-0">Pending (Standard, Non-Standard)</h5>
                             </div>
                             <div class="box-footer no-padding">
                                 <ul class="nav nav-stacked">
                                     <li><a href="#">Last Year <span class="pull-right badge bg-blue">@Model.EnqCountModels.PLastYear</span></a></li>
                                     <li><a href="#">Last Month <span class="pull-right badge bg-blue">@Model.EnqCountModels.PLastMonth</span></a></li>
                                     @*<li><a href="#">Last 7 Days <span class="pull-right badge bg-aqua">@Model.EnqCountModels.PLast7Days</span></a></li>*@
-                                    <li><a href="#">Yesterday <span class="pull-right badge bg-blue">@Model.EnqCountModels.PYesterday</span></a></li>
-                                    <li><a href="#">Today <span class="pull-right badge bg-green">@Model.EnqCountModels.PToday</span></a></li>
-                                    <li><a href="#">Current Month <span class="pull-right badge bg-red">@Model.EnqCountModels.PCMonth</span></a></li>
-                                    <li><a href="#">Current Year <span class="pull-right badge bg-red">@Model.EnqCountModels.PCYear</span></a></li>
+                                    <li><a href="#">With in 48 Hours <span class="badge bg-blue">@Model.EnqCountModels.PYesterdayS</span><span class="pull-right badge bg-blue">@Model.EnqCountModels.PYesterdayN</span></a></li>
+                                    <li><a href="#">With in 24 Hours <span class="badge bg-blue">@Model.EnqCountModels.PTodayS</span><span class="pull-right badge bg-green">@Model.EnqCountModels.PTodayN</span></a></li>
+                                    <li><a href="#">Current Month <span class="badge bg-blue">@Model.EnqCountModels.PCMonthS</span><span class="pull-right badge bg-red">@Model.EnqCountModels.PCMonthN</span></a></li>
+                                    <li><a href="#">Current Month Total <span class="pull-right badge bg-red">@Model.EnqCountModels.PCMonth</span></a></li>
                                     @*<li><a href="#">Total <span class="pull-right badge bg-red">@Model.EnqCountModels.PTotal</span></a></li>*@
                                 </ul>
                             </div>
