--- a/Views/Admin/Sourced.cshtml
+++ b/Views/Admin/Sourced.cshtml
@@ -78,33 +78,33 @@
                             <div class="form-group">
                                 @Html.LabelFor(m => m.Search, new { @class = "form-control-label" }) <sup>*</sup>
                                 @Html.TextBoxFor(m => m.Search,
-                                new
-                                {
-                                    @class = "form-control text-capitalize",
-                                    placeholder = @Html.DisplayNameFor(m => m.Search)
-                                })
+             new
+             {
+                 @class = "form-control text-capitalize",
+                 placeholder = @Html.DisplayNameFor(m => m.Search)
+             })
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                             <div class="form-group">
                                 @Html.LabelFor(m => m.StartDate, new { @class = "form-control-label" }) <sup>*</sup>
                                 @Html.TextBoxFor(m => m.StartDate,
-                                new
-                                {
-                                    @class = "form-control datepicker",
-                                    placeholder = @Html.DisplayNameFor(m => m.StartDate)
-                                })
+             new
+             {
+                 @class = "form-control datepicker",
+                 placeholder = @Html.DisplayNameFor(m => m.StartDate)
+             })
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                             <div class="form-group">
                                 @Html.LabelFor(m => m.EndDate, new { @class = "form-control-label" }) <sup>*</sup>
                                 @Html.TextBoxFor(m => m.EndDate,
-                                new
-                                {
-                                    @class = "form-control datepicker",
-                                    placeholder = @Html.DisplayNameFor(m => m.EndDate)
-                                })
+             new
+             {
+                 @class = "form-control datepicker",
+                 placeholder = @Html.DisplayNameFor(m => m.EndDate)
+             })
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
@@ -225,11 +225,11 @@
                             </div>
                             <div class="col-md-12">
                                 @*<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                    <div class="form-group">
-                                        <label>Specification</label>
-                                        <textarea id="specification" name="specification" placeholder="Enter Specification" rows="5" cols="50" class="form-control mspec"></textarea>
-                                    </div>
-                                </div>*@
+                                        <div class="form-group">
+                                            <label>Specification</label>
+                                            <textarea id="specification" name="specification" placeholder="Enter Specification" rows="5" cols="50" class="form-control mspec"></textarea>
+                                        </div>
+                                    </div>*@
                                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                     <div class="form-group">
                                         <label>Brand</label><br />
@@ -240,7 +240,7 @@
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-primary updpmb">Save changes</button>
+                            <a href="javascript:void(0)" class="btn btn-primary updpmb">Save changes</a>
                         </div>
                     </div>
                 </div>
