--- a/Views/Admin/Customers.cshtml
+++ b/Views/Admin/Customers.cshtml
@@ -58,7 +58,7 @@
                             </div>
                         </div>
                         <div class="box-body">
-                            <table id="tblCustomers" class="table table-bordered display nowrap">
+                            <table id="tblCustomers" class="table table-bordered display">
                                 <thead>
                                     <tr>
                                         <th>SNo.</th>
