--- a/Views/Admin/VenSourced.cshtml
+++ b/Views/Admin/VenSourced.cshtml
@@ -86,22 +86,24 @@
                                     <th>@Html.DisplayNameFor(model => model.VenSourceModelList.FirstOrDefault().Vendor)</th>
                                     <th>@Html.DisplayNameFor(model => model.VenSourceModelList.FirstOrDefault().EnqAssignTo)</th>
                                     <th>Email</th>
+                                    <th>Send</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 @foreach (var item in Model.VenSourceModelList)
                                 {
-                                    <tr>
-                                        <td></td>
-                                        <td>@Html.DisplayFor(modelItem => item.SourcedDate)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.EnqPId)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.VSNo)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.Vendor)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.EnqAssignTo)</td>
-                                        <td>
-                                            @Html.EncodedActionLink("Send", "SendVendorEnquiryEmail", "Admin", new { id = item.VSNo }, new { @class = "", title = "Edit", @target = "_blank" })
-                                        </td>
-                                    </tr>
+                                <tr>
+                                    <td></td>
+                                    <td>@Html.DisplayFor(modelItem => item.SourcedDate)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.EnqPId)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.VSNo)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Vendor)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.EnqAssignTo)</td>
+                                    <td>
+                                        @Html.EncodedActionLink("Send", "SendVendorEnquiryEmail", "Admin", new { id = item.VSNo }, new { @class = "", title = "Edit", @target = "_blank" })
+                                    </td>
+                                    <td>@Html.DisplayFor(modelItem => item.EmailSend)</td>
+                                </tr>
                                 }
                             </tbody>
                         </table>
